--- a/islt_7310/styles.css
+++ b/islt_7310/styles.css
@@ -1,3 +1,3 @@
-#paragraph {font-style: italic;}
+#paragraph {font-style: bold;}
 
-     .paragraph {color: black;}
+     .paragraph {color: #333333;}
