--- a/islt_7310/styles.css
+++ b/islt_7310/styles.css
@@ -1,3 +1,9 @@
 #paragraph {font-style: normal;}
 
      .paragraph {color: #333333;}
+
+#Heading3 {
+     background: color #007dfa;
+     color: black;
+     padding: 40px;
+}
