--- a/styles.css
+++ b/styles.css
@@ -1,40 +1,67 @@
 #paragraph1 {
      text-align: center;
      font-style: normal;
-     margin: 40px;
+     margin-top: 20px;
      color: #333333;
-     padding-left: 150px;
-     padding-right: 150px;
+     padding-left: 500px;
+     padding-right: 500px;
+}
 
+
+#heading3 {
+     font-size: x-large;
+     text-decoration: solid;
+     text-decoration-color: #007dfa;
+     font-style: normal;
+     color: #000;
+     font-style: 'Poppins', sans-serif;
+     text-align: center;
+     margin: 10px;
+     margin-top: 70px;
 }
 
 #heading1 {
      font-size: xx-large;
      text-align: center;
      letter-spacing: 1.5px;
-     padding-block-end: 10px;
-     padding-block-start: 10px;
+     padding-block-end: 00px;
+     padding-block-start: 0px;
      background-color:#007dfa;
      color: #fff;
      font-family: 'Poppins', sans-serif;
-     margin: 10px
-     
-}
-
-#heading3 {
-     font-size: x-large;
-     text-decoration: underline;
-     text-decoration-color: #007dfa;
-     font-style: normal;
-     color: #000;
-     font-style: 'Poppins', sans-serif;
-     text-align: center;
-     margin: 40px
+     margin: 0px
 }
 
 #foot {
      text-align: center;
+     margin-top: 150px;
+     text-decoration: underline;
+     text-decoration-color: #007dfa;
 }
+
+.photo-gallery {
+     --gap: 30px;
+     --num-cols: 3;
+     --row-height: 600px;
+     box-sizing:border-box;
+     padding: 100px;
+     display: grid;
+     grid-template-columns: repeat(var(--num-cols), 1fr);
+     grid-auto-rows: var(--row-height);
+     gap: var(--gap);
+     margin-top: 5px;
+}
+
+.photo-gallery > img {
+     width: 100%;
+     height: 100%;
+     border: #333333;
+     border-style:solid;
+     border-width: 5px;
+}
+
+.photo-gallery didot  
+
 
 #abouttitle {
      text-align: center;
@@ -219,7 +246,7 @@ nav .logo{
 }
 nav .logo p{
      float: left;
-     color: #007dfa;
+     color: #fff;
      text-transform: uppercase;
 }
 nav ul{
@@ -241,4 +268,11 @@ nav ul li a:hover{
 }
 nav ul li .active{
      color: #007dfa;
+}
+
+nav .logo p:hover {
+     color: #007dfa;
+     
+
+
 }
