--- a/islt_7310/styles.css
+++ b/islt_7310/styles.css
@@ -1,10 +1,277 @@
-#paragraph {font-style: normal;}
+#paragraph1 {
+     text-align: center;
+     font-style: normal;
+     margin-top: 20px;
+     color: #333333;
+     padding-left: 500px;
+     padding-right: 500px;
+}
 
-     .paragraph {color: #333333;
-     border: #007dfa;
-     }
 
-#Heading3 {
-     color: black;
- 
+#heading3 {
+     font-size: x-large;
+     text-decoration: solid;
+     text-decoration-color: #007dfa;
+     font-style: normal;
+     color: #000;
+     font-style: 'Poppins', sans-serif;
+     text-align: center;
+     margin: 10px;
+     margin-top: 70px;
+}
+
+#heading1 {
+     font-size: xx-large;
+     text-align: center;
+     letter-spacing: 1.5px;
+     padding-block-end: 00px;
+     padding-block-start: 0px;
+     background-color:#007dfa;
+     color: #fff;
+     font-family: 'Poppins', sans-serif;
+     margin: 0px
+}
+
+#foot {
+     text-align: center;
+     margin-top: 150px;
+     text-decoration: underline;
+     text-decoration-color: #007dfa;
+}
+
+.photo-gallery {
+     --gap: 30px;
+     --num-cols: 3;
+     --row-height: 600px;
+     box-sizing:border-box;
+     padding: 100px;
+     display: grid;
+     grid-template-columns: repeat(var(--num-cols), 1fr);
+     grid-auto-rows: var(--row-height);
+     gap: var(--gap);
+     margin-top: 5px;
+}
+
+.photo-gallery > img {
+     width: 100%;
+     height: 100%;
+     border: #333333;
+     border-style:solid;
+     border-width: 5px;
+}
+
+.photo-gallery didot  
+
+
+#abouttitle {
+     text-align: center;
+     font-family: 'Poppins', sans-serif;
+     color: #000;
+     margin: 20px;
+     font-style: normal
+}
+
+#aboutheading {
+     font-size: xx-large;
+     text-align: center;
+     letter-spacing: 1.5px;
+     padding-block-end: 10px;
+     padding-block-start: 10px;
+     background-color:#007dfa;
+     color: #fff;
+     font-family: 'Poppins', sans-serif;
+     margin: 10px
+     
+}
+
+#pdf{
+     text-align: center;
+}
+
+#intro {
+     text-align: center;
+     padding-left: 150px;
+     padding-right: 150px;
+}
+
+ #links {
+     text-align: center;
+     margin:auto;
+     border-style: solid;
+     border-color: #007dfa;
+     width: 200px;
+     font-size: larger;
+     font-family: 'Poppins', sans-serif;
+     border-spacing: 100px;
+     margin-top: 20px;
+}
+
+#links2 {
+     text-align: center;
+     margin:auto;
+     border-style: solid;
+     border-color: #007dfa;
+     width: 200px;
+     font-size: larger;
+     font-family: 'Poppins', sans-serif;
+     margin-top: 20px;
+
+}
+
+h4 a:link{
+     color: #000;
+
+}
+
+h5 a:link{
+     color:#000
+}
+
+
+h4 a:visited{
+     color: #000;
+}
+
+
+h5 a:visited{
+     color: #000;
+}
+
+
+h4 a:hover{
+     color: #007dfa;
+}
+
+h5 a:hover{
+     color: #007dfa;
+     flood-color: #007dfa;
+}
+
+
+#reflect {
+     font-size: xx-large;
+     text-align: center;
+     letter-spacing: 1.5px;
+     padding-block-end: 10px;
+     padding-block-start: 10px;
+     background-color:#007dfa;
+     color: #fff;
+     font-family: 'Poppins', sans-serif;
+     margin: 10px
+
+}
+
+#Past {
+     font-size: x-large;
+     text-decoration: underline;
+     text-decoration-color: #007dfa;
+     font-style: normal;
+     color: #000;
+     font-style: 'Poppins', sans-serif;
+     text-align: center;
+     margin: 40px
+
+}
+
+#reflectpara {
+     text-indent: 15px;
+     text-align: left;
+     padding-left: 20px;
+     padding-right: 20px;
+     padding-top: 20px;
+}
+
+#para2 {
+     text-indent: 15px;
+     text-align: left;
+     padding-left: 20px;
+     padding-right: 20px;
+}
+
+#para3 {
+     text-indent: 15px;
+     text-align: left;
+     padding-left: 20px;
+     padding-right: 20px;
+}
+
+#para4 {
+     text-indent: 15px;
+     text-align: left;
+     padding-left: 20px;
+     padding-right: 20px;
+}
+
+#para5 {
+     text-indent: 15px;
+     text-align: left;
+     padding-left: 20px;
+     padding-right: 20px;
+     padding-bottom: 20px;
+}
+
+.essay {
+     width: 80%;
+     border-style: solid;
+     border-color: #007dfa;
+     margin:auto
+
+}
+
+#foot2{
+     text-align: center;
+     margin-top: 20px
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;500&display=swap');
+*{
+     margin: 0px;
+     padding: 0px;
+     box-sizing: border-box;
+     font-family: 'Poppins', sans-serif;
+}
+nav{
+     width: 100%;
+     height: 75px;
+     background-color: #333333;
+     line-height: 75px;
+     padding:0px 100px;
+     position:relative;
+     z-index: 1;
+}
+nav .logo{
+     font-size: 30px;
+     font-weight: bold;
+     letter-spacing: 1.5px;
+}
+nav .logo p{
+     float: left;
+     color: #fff;
+     text-transform: uppercase;
+}
+nav ul{
+     float: right;
+}
+nav ul li{
+     display: inline-block;
+     list-style: none;
+}
+nav ul li a{
+     color: #fff;
+     text-decoration: none;
+     font-size: 18px;
+     text-transform: uppercase;
+     padding:0px 10px;
+}
+nav ul li a:hover{
+     color: #007dfa;
+}
+nav ul li .active{
+     color: #007dfa;
+}
+
+nav .logo p:hover {
+     color: #007dfa;
+
+
 }
