--- a/islt_7310/styles.css
+++ b/islt_7310/styles.css
@@ -26,7 +26,7 @@
      letter-spacing: 1.5px;
      padding-block-end: 00px;
      padding-block-start: 0px;
-     background-color:#007dfa;
+     background-color:#007dfa8c;
      color: #fff;
      font-family: 'Poppins', sans-serif;
      margin: 0px
@@ -97,7 +97,7 @@
      padding-left: 175px;
      padding-right: 175px;
      padding-top: 0px;
-     padding-bottom: 50px;
+     padding-bottom: px;
 }
 
  #links {
