--- a/islt_7310/styles.css
+++ b/islt_7310/styles.css
@@ -24,9 +24,9 @@
      font-size: xx-large;
      text-align: center;
      letter-spacing: 1.5px;
-     padding-block-end: 00px;
+     padding-block-end: 0px;
      padding-block-start: 0px;
-     background-color:#007dfa8c;
+     background-color:#007dfa;
      color: #fff;
      font-family: 'Poppins', sans-serif;
      margin: 0px
