--- a/islt_7310/styles.css
+++ b/islt_7310/styles.css
@@ -10,8 +10,8 @@
 
 #heading3 {
      font-size: x-large;
-     text-decoration: solid;
-     text-decoration-color: #007dfa;
+     text-decoration: underline;
+     text-decoration-color: #0cc572;
      font-style: normal;
      color: #000;
      font-style: 'Poppins', sans-serif;
@@ -35,8 +35,8 @@
 #foot {
      text-align: center;
      margin-top: 150px;
-     text-decoration: underline;
-     text-decoration-color: #007dfa;
+     text-decoration: overline;
+     text-decoration-color: #0cc572;
 }
 
 .photo-gallery {
@@ -60,24 +60,65 @@
      border-width: 5px;
 }
 
+#Quote {
+     text-decoration: overline;
+     text-decoration-color: #0cc572;
+     text-decoration-line: overline;
+     text-decoration-thickness: 2px;
+     font-size: x-small;
+     font-family: 'Poppins',sans-serif;
+     font-weight: bolder;
+     color: #000;
+     text-align: center;
+     padding-top: 5px;
+     padding-bottom: 5px;
+     padding-left: 200px;
+     padding-right: 200px;
 
+}
+
+#Under {
+     font-size: small;
+     font-family: 'Poppins',sans-serif;
+     font-weight:bolder;
+     color: #333333;
+     text-align: center;
+     padding-top: 5px;
+     padding-bottom: 30px;
+     padding-left: 350px;
+     padding-right: 350px;
+
+}
+
+#headshot {
+     border-color: #333333;
+     border-style:solid;
+     border-width: 5px;
+     margin: 0px auto;
+     padding: 0px;
+     display: block;
+     width: 15%;
+     height: 15%;
+}
 
 #aboutheading {
+     text-decoration: underline;
+     text-decoration-color: #0cc572;
+     text-decoration-thickness: 3px;
      font-size: xx-large;
      text-align: center;
      letter-spacing: 1.5px;
-     padding-block-end: 10px;
-     padding-block-start: 10px;
-     background-color:#007dfa8c;
-     color: #fff;
+     background-color: #fff;
+     background-size: cover;
+     color: #333333;
      font-family: 'Poppins', sans-serif;
-     margin: 10px
+     margin: 10px;
+     padding-bottom: 20px;
+     padding-top: 20px;
      
 }
 
 #about2 {
-     text-decoration: underline;
-     text-decoration-color: #333333;
      font-size: x-large;
      text-align: center;
      letter-spacing: 1.5px;
@@ -87,24 +128,23 @@
      margin: 10px
 }
 
-
 #pdf{
      text-align: center;
 }
 
 #intro {
      text-align: center;
-     padding-left: 150px;
-     padding-right: 150px;
+     padding-left: 155px;
+     padding-right: 155px;
      padding-top: 0px;
-     padding-bottom: px;
+     padding-bottom: 30px;
 }
 
  #links {
      text-align: center;
      margin:auto;
      border-style: solid;
-     border-color: #007dfa8c;
+     border-color: #0cc57288;
      width: 200px;
      font-size: larger;
      font-family: 'Poppins', sans-serif;
@@ -116,7 +156,7 @@
      text-align: center;
      margin:auto;
      border-style: solid;
-     border-color: #007dfa8c;
+     border-color: #0cc57288;
      width: 200px;
      font-size: larger;
      font-family: 'Poppins', sans-serif;
@@ -145,35 +185,40 @@ h5 a:visited{
 
 
 h4 a:hover{
-     color: #007dfa;
+     color: #0cc572;
 }
 
 h5 a:hover{
-     color: #007dfa;
-     flood-color: #007dfa;
+     color: #0cc572;
+     flood-color: #0cc572;
 }
 
 
 #reflect {
+     text-decoration: underline;
+     text-decoration-color: #0cc572;
+     text-decoration-thickness: 3px;
      font-size: xx-large;
      text-align: center;
      letter-spacing: 1.5px;
-     padding-block-end: 10px;
-     padding-block-start: 10px;
-     background-color: #007dfa8c;
-     color: #fff;
+     background-color: #fff;
+     background-size: cover;
+     color: #333333;
      font-family: 'Poppins', sans-serif;
-     margin: 10px
-
+     margin: 10px;
+     padding-bottom: 20px;
+     padding-top: 20px;
+     
 }
 
 #Past {
-     font-size: x-large;
+     font-size: large;
      font-style: normal;
      color: #000;
      font-style: 'Poppins', sans-serif;
      text-align: center;
-     margin: 40px;
+     margin-top: 40px;
+     margin-bottom: 10px;
      color: #333333;
 
 }
@@ -218,7 +263,7 @@ h5 a:hover{
 .essay {
      width: 80%;
      border-style: solid;
-     border-color: #007dfa8c;
+     border-color: #0cc57288;
      margin:auto
 
 }
@@ -251,7 +296,7 @@ nav .logo{
 }
 nav .logo p{
      float: left;
-     color: #fff;
+     color: #0cc572;
      text-transform: uppercase;
 }
 nav ul{
@@ -269,14 +314,14 @@ nav ul li a{
      padding:0px 10px;
 }
 nav ul li a:hover{
-     color: #007dfa;
+     color: #0cc572;
 }
 nav ul li .active{
-     color: #007dfa;
+     color: #0cc572;
 }
 
 nav .logo p:hover {
-     color: #007dfa;
+     color: #fff;
 
 
 }
