--- a/islt_7310/styles.css
+++ b/islt_7310/styles.css
@@ -35,10 +35,14 @@
 #foot {
      text-align: center;
      margin-top: 150px;
-     text-decoration: overline;
-     text-decoration-color: #0cc572;
+
 }
 
+#foot:hover{
+     text-decoration: underline;
+     text-decoration-color: #0cc572;
+     color: #0cc572;
+}
 .photo-gallery {
      --gap: 30px;
      --num-cols: 3;
@@ -58,6 +62,36 @@
      border: #333333;
      border-style:solid;
      border-width: 5px;
+}
+
+#leaves:hover {
+     transform: scale(1.3);
+     z-index: 2;
+}
+
+#didot:hover {
+     transform: scale(1.3);
+     z-index: 2;
+}
+
+#spider:hover {
+     transform: scale(1.3);
+     z-index: 2;
+}
+
+#hands:hover {
+     transform: scale(1.3);
+     z-index: 2;
+}
+
+#sunset:hover {
+     transform: scale(1.3);
+     z-index: 2;
+}
+
+#poster:hover {
+     transform: scale(1.3);
+     z-index: 2;
 }
 
 #Quote {
@@ -325,3 +359,191 @@ nav .logo p:hover {
 
 
 }
+
+.project-gallery {
+     --gap: 10px;
+     --num-cols: 2;
+     --row-height: 500px;
+     box-sizing:border-box;
+     margin-left: 200px;
+     padding: 100px;
+     display: grid;
+     grid-template-columns: repeat(var(--num-cols), 1fr);
+     grid-auto-rows: var(--row-height);
+     gap: var(--gap);
+     margin-top: 5px;
+}
+
+
+#didot-2:hover {
+     transform: scale(1.3);
+     z-index: 2;
+}
+
+#firmin-didot:hover {
+     transform: scale(1.3);
+     z-index: 2;
+}
+
+.project-gallery > img {
+     border: #333333;
+     border-style:solid;
+     border-width: 5px;
+}
+
+#didot-para {
+     text-align: center;
+     padding-left: 20px;
+     padding-right: 20px;
+     padding-top: 20px;
+     padding-bottom: 20px;
+     width: 80%;
+     border-style: solid;
+     border-color: #0cc57288;
+     margin:auto;
+     border-width: 5px;
+}
+
+.project-gallery-fruit {
+     --gap: 10px;
+     --num-cols: 4;
+     --row-height: 200px;
+     box-sizing:border-box;
+     padding: 100px;
+     margin-left: 130px;
+     display: grid;
+     grid-template-columns: repeat(var(--num-cols), 1fr);
+     grid-auto-rows: var(--row-height);
+     gap: var(--gap);
+     margin-top: 5px;
+}
+
+.project-gallery-fruit > img {
+     border: #333333;
+     border-style:solid;
+     border-width: 5px;
+}
+
+#berried:hover {
+     transform: scale(1.3);
+     z-index: 2;
+}
+
+#strawberry:hover {
+     transform: scale(1.3);
+     z-index: 2;
+}
+
+#grapes:hover {
+     transform: scale(1.3);
+     z-index: 2;
+}
+
+#cover:hover {
+     transform: scale(1.3);
+     z-index: 2;
+}
+
+
+#fruit-para {
+     text-align: center;
+     padding-left: 20px;
+     padding-right: 20px;
+     padding-top: 20px;
+     padding-bottom: 20px;
+     width: 80%;
+     border-style: solid;
+     border-color: #0cc57288;
+     margin:auto;
+     border-width: 5px;
+}
+
+.project-gallery-poster {
+     --gap: 20px;
+     --num-cols: 3;
+     --row-height: 550px;
+     box-sizing:border-box;
+     padding: 100px;
+     margin-left: 50px;
+     display: grid;
+     grid-template-columns: repeat(var(--num-cols), 1fr);
+     grid-auto-rows: var(--row-height);
+     gap: var(--gap);
+     margin-top: 5px;
+}
+
+.project-gallery-poster > img {
+     border: #333333;
+     border-style:solid;
+     border-width: 5px;
+}
+
+#poster-1:hover {
+     transform: scale(1.3);
+     z-index: 2;
+}
+
+#poster-2:hover {
+     transform: scale(1.3);
+     z-index: 2;
+}
+
+#poster-3:hover {
+     transform: scale(1.3);
+     z-index: 2;
+}
+
+
+#poster-para {
+     text-align: center;
+     padding-left: 20px;
+     padding-right: 20px;
+     padding-top: 20px;
+     padding-bottom: 20px;
+     width: 80%;
+     border-style: solid;
+     border-color: #0cc57288;
+     margin:auto;
+     border-width: 5px;
+}
+
+.project-gallery-caterpillar {
+     --gap: 20px;
+     --num-cols: 1;
+     --row-height: 500px;
+     box-sizing:border-box;
+     margin-left: 170px;
+     padding: 100px;
+     display: grid;
+     grid-template-columns: repeat(var(--num-cols), 1fr);
+     grid-auto-rows: var(--row-height);
+     gap: var(--gap);
+     margin-top: 5px;
+}
+
+.project-gallery-caterpillar > img {
+     border: #333333;
+     border-style:solid;
+     border-width: 5px;
+}
+
+#caterpillar:hover {
+     transform: scale(1.3);
+     z-index: 2;
+}
+
+
+#caterpillar-para {
+     text-align: center;
+     padding-left: 20px;
+     padding-right: 20px;
+     padding-top: 20px;
+     padding-bottom: 20px;
+     width: 80%;
+     border-style: solid;
+     border-color: #0cc57288;
+     margin:auto;
+     border-width: 5px;
+}
+
+
