--- a/islt_7310/styles.css
+++ b/islt_7310/styles.css
@@ -38,6 +38,11 @@
 
 }
 
+
+#foot:hover {
+     transform: scale(1.3);
+     z-index: 2;
+}
 #foot:hover{
      text-decoration: underline;
      text-decoration-color: #0cc572;
@@ -89,7 +94,7 @@
      z-index: 2;
 }
 
-#poster:hover {
+#firmin-didot:hover {
      transform: scale(1.3);
      z-index: 2;
 }
@@ -99,7 +104,7 @@
      text-decoration-color: #0cc572;
      text-decoration-line: overline;
      text-decoration-thickness: 2px;
-     font-size: small;
+     font-size: x-small;
      font-family: 'Poppins',sans-serif;
      font-weight: bolder;
      color: #000;
@@ -373,6 +378,7 @@ nav .logo p:hover {
      gap: var(--gap);
      margin-top: 5px;
 }
+
 
 #didot-2:hover {
      transform: scale(1.3);
