--- a/islt_7310/styles.css
+++ b/islt_7310/styles.css
@@ -34,10 +34,21 @@
 
 #foot {
      text-align: center;
-     margin-top: 150px;
-
+     margin-top: 0px;
+     font-family: 'Poppins', sans-serif;
 }
 
+.begin {
+     text-indent: 2px;
+     padding: 0px;
+     text-align: center;
+     margin-top: 150px;
+     text-decoration: underline;
+     text-decoration-color: #000;
+     font-size: large;
+     font-style: bold;
+     font-family: 'Poppins', sans-serif;
+}
 
 #foot:hover {
      transform: scale(1.3);
@@ -47,6 +58,7 @@
      text-decoration: underline;
      text-decoration-color: #0cc572;
      color: #0cc572;
+     font-display: ;
 }
 .photo-gallery {
      --gap: 30px;
@@ -307,10 +319,6 @@ h5 a:hover{
 
 }
 
-#foot2{
-     text-align: center;
-     margin-top: 20px
-}
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;500&display=swap');
 *{
