--- a/islt_7310/styles.css
+++ b/islt_7310/styles.css
@@ -3,7 +3,7 @@ nav{
      height: 75px;
      background-color: #333333;
      line-height: 75px;
-     padding:0px 100px;
+     padding:0px;
      position:relative;
      z-index: 1;
 }
@@ -16,6 +16,7 @@ nav .logo p{
      float: left;
      color: #0cc572;
      text-transform: uppercase;
+     margin-left: 30px;
 }
 nav ul{
      float: right;
@@ -23,6 +24,7 @@ nav ul{
 nav ul li{
      display: inline-block;
      list-style: none;
+     margin: 0 5px;
 }
 nav ul li a{
      color: #fff;
@@ -399,7 +401,7 @@ h5 a:hover{
      margin-top: 5px;
 }
 
-
+x
 #didot-2:hover {
      transform: scale(1.3);
      z-index: 2;
@@ -571,9 +573,10 @@ h5 a:hover{
      border-width: 5px;
 }
 
-
-@media (min-width:320) {
-     .project-gallery-poster{
-          width: 100%;
+@media (min-width:320){
+     #leaves {
+          width: 100px;
+          height: 167px;
+     
      }
 }
