--- a/islt_7310/styles.css
+++ b/islt_7310/styles.css
@@ -108,6 +108,7 @@ nav .logo p:hover {
      color: #0cc572;
 }
 
+
 .photo-gallery {
      --gap: 30px;
      --num-cols: 3;
@@ -393,6 +394,7 @@ h5 a:hover{
      --row-height: 500px;
      box-sizing:border-box;
      margin-left: 200px;
+     margin-right: 200px;
      padding: 100px;
      display: grid;
      grid-template-columns: repeat(var(--num-cols), 1fr);
@@ -573,10 +575,3 @@ x
      border-width: 5px;
 }
 
-@media (min-width:320){
-     #leaves {
-          width: 100px;
-          height: 167px;
-     
-     }
-}
