--- a/islt_7310/styles.css
+++ b/islt_7310/styles.css
@@ -1,5 +1,5 @@
 nav{
-     width: 100%;
+     width:100%;
      height: 75px;
      background-color: #333333;
      line-height: 75px;
@@ -53,6 +53,7 @@ nav .logo p:hover {
      color: #333333;
      padding-left: 300px;
      padding-right: 300px;
+     width: 100%;
 }
 
 
@@ -108,6 +109,14 @@ nav .logo p:hover {
      color: #0cc572;
 }
 
+@media all and (max-width:400px) {
+     .photo-gallery{
+          width: 100%;
+          display: grid;
+          --num-cols:1;
+     }
+}
+
 
 .photo-gallery {
      --gap: 30px;
@@ -121,6 +130,7 @@ nav .logo p:hover {
      gap: var(--gap);
      margin-top: 5px;
 }
+
 
 .photo-gallery > img {
      width: 100%;
@@ -358,7 +368,7 @@ h5 a:hover{
      padding-bottom: 20px;
 }
 
-.container2{
+.container3{
      grid: 75%;
      --num-cols: 1;
      box-sizing:border-box;
@@ -382,20 +392,19 @@ h5 a:hover{
      font-family: 'Poppins', sans-serif;
 }
 
-.container {
-     grid: 100%;
+.container2 {
+     display: grid;
+     grid-template-columns: 1;
      width: 100%;
-     text-align: center;
-     min-width: 320px;
+     align-content:  center;
 }
+
 
 .project-gallery {
      --gap: 10px;
      --num-cols: 2;
      --row-height: 500px;
-     box-sizing:border-box;
      margin-left: 200px;
-     margin-right: 200px;
      padding: 100px;
      display: grid;
      grid-template-columns: repeat(var(--num-cols), 1fr);
@@ -438,7 +447,6 @@ x
      --gap: 10px;
      --num-cols: 4;
      --row-height: 200px;
-     box-sizing:border-box;
      padding: 100px;
      margin-left: 130px;
      display: grid;
@@ -492,7 +500,6 @@ x
      --gap: 20px;
      --num-cols: 3;
      --row-height: 550px;
-     box-sizing:border-box;
      padding: 100px;
      margin-left: 50px;
      display: grid;
@@ -541,7 +548,6 @@ x
      --gap: 20px;
      --num-cols: 1;
      --row-height: 500px;
-     box-sizing:border-box;
      margin-left: 170px;
      padding: 100px;
      display: grid;
@@ -576,3 +582,7 @@ x
      border-width: 5px;
 }
 
+.box {
+     background-image: url(back.png);
+     width: 100%;
+}
