--- a/islt_7310/styles.css
+++ b/islt_7310/styles.css
@@ -609,3 +609,58 @@ x
 
 
 }
+
+
+.form {
+     margin: 35px;
+}
+
+.input-field{
+     width: 400px;
+     height: 40px;
+     margin-top: 20px;
+     padding-left: 10px;
+     border-style: solid;
+     border-width: 1px;
+     border-color: #0cc572;
+     border-radius: 14px;
+     outline: none;
+
+
+}
+
+.textarea-field{
+     height: 150px;
+     padding-top: 10px;
+
+}
+
+.contact-box {
+     display: grid;
+     columns: 1;
+     width: 500px;
+     background-color: #fff;
+     box-shadow: 0 0 20px 0 #999; 
+     top: 50%;
+     left: 50%;
+     transform: translate(-50%, -50%);
+     position: absolute;
+ }
+
+ .bttn {
+      border-radius: 20px;
+      color: #fff;
+      margin-top: 18px;
+      padding: 10px;
+      background-color: #0cc572;
+      border: none;
+      font-size: 12px;
+      cursor: pointer;
+
+
+ }
+
+ #contact-me {
+      text-align: center;
+      margin: 35px;
+ } 
