--- a/islt_7310/styles.css
+++ b/islt_7310/styles.css
@@ -81,10 +81,19 @@ nav .logo p:hover {
      margin: 0px
 }
 
+.box{
+     position:sticky;
+     top: 100%;
+}
+
 #foot {
      text-align: center;
      margin-top: 0px;
      font-family: 'Poppins', sans-serif;
+}
+
+body{
+     min-height: 100vh;
 }
 
 .begin {
@@ -145,7 +154,7 @@ nav .logo p:hover {
      z-index: 2;
 }
 
-#didot:hover {
+#didot-2:hover {
      transform: scale(1.3);
      z-index: 2;
 }
@@ -639,8 +648,6 @@ x
      display: grid;
      columns: 1;
      width: 500px;
-     background-color: #fff;
-     box-shadow: 0 0 20px 0 #999; 
      top: 50%;
      left: 50%;
      transform: translate(-50%, -50%);
